// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getGroupAttributes Return basic attributes from array 1`] = `
{
  "border-bottom-left-radius-general": 10,
  "border-bottom-left-radius-l": undefined,
  "border-bottom-left-radius-m": undefined,
  "border-bottom-left-radius-s": undefined,
  "border-bottom-left-radius-xl": undefined,
  "border-bottom-left-radius-xs": undefined,
  "border-bottom-left-radius-xxl": undefined,
  "border-bottom-right-radius-general": 10,
  "border-bottom-right-radius-l": undefined,
  "border-bottom-right-radius-m": undefined,
  "border-bottom-right-radius-s": undefined,
  "border-bottom-right-radius-xl": undefined,
  "border-bottom-right-radius-xs": undefined,
  "border-bottom-right-radius-xxl": undefined,
  "border-bottom-width-general": 2,
  "border-bottom-width-l": undefined,
  "border-bottom-width-m": undefined,
  "border-bottom-width-s": undefined,
  "border-bottom-width-xl": undefined,
  "border-bottom-width-xs": undefined,
  "border-bottom-width-xxl": undefined,
  "border-color-general": undefined,
  "border-color-l": undefined,
  "border-color-m": undefined,
  "border-color-s": undefined,
  "border-color-xl": undefined,
  "border-color-xs": undefined,
  "border-color-xxl": undefined,
  "border-left-width-general": 2,
  "border-left-width-l": undefined,
  "border-left-width-m": undefined,
  "border-left-width-s": undefined,
  "border-left-width-xl": undefined,
  "border-left-width-xs": undefined,
  "border-left-width-xxl": undefined,
  "border-palette-color-general": 5,
  "border-palette-color-l": undefined,
  "border-palette-color-m": undefined,
  "border-palette-color-s": undefined,
  "border-palette-color-xl": undefined,
  "border-palette-color-xs": undefined,
  "border-palette-color-xxl": undefined,
  "border-palette-opacity-general": undefined,
  "border-palette-opacity-l": undefined,
  "border-palette-opacity-m": undefined,
  "border-palette-opacity-s": undefined,
  "border-palette-opacity-xl": undefined,
  "border-palette-opacity-xs": undefined,
  "border-palette-opacity-xxl": undefined,
  "border-palette-sc-status-general": undefined,
  "border-palette-sc-status-l": undefined,
  "border-palette-sc-status-m": undefined,
  "border-palette-sc-status-s": undefined,
  "border-palette-sc-status-xl": undefined,
  "border-palette-sc-status-xs": undefined,
  "border-palette-sc-status-xxl": undefined,
  "border-palette-status-general": true,
  "border-palette-status-l": undefined,
  "border-palette-status-m": undefined,
  "border-palette-status-s": undefined,
  "border-palette-status-xl": undefined,
  "border-palette-status-xs": undefined,
  "border-palette-status-xxl": undefined,
  "border-right-width-general": 2,
  "border-right-width-l": undefined,
  "border-right-width-m": undefined,
  "border-right-width-s": undefined,
  "border-right-width-xl": undefined,
  "border-right-width-xs": undefined,
  "border-right-width-xxl": undefined,
  "border-style-general": "solid",
  "border-style-l": undefined,
  "border-style-m": undefined,
  "border-style-s": undefined,
  "border-style-xl": undefined,
  "border-style-xs": undefined,
  "border-style-xxl": undefined,
  "border-sync-radius-general": true,
  "border-sync-radius-l": undefined,
  "border-sync-radius-m": undefined,
  "border-sync-radius-s": undefined,
  "border-sync-radius-xl": undefined,
  "border-sync-radius-xs": undefined,
  "border-sync-radius-xxl": undefined,
  "border-sync-width-general": true,
  "border-sync-width-l": undefined,
  "border-sync-width-m": undefined,
  "border-sync-width-s": undefined,
  "border-sync-width-xl": undefined,
  "border-sync-width-xs": undefined,
  "border-sync-width-xxl": undefined,
  "border-top-left-radius-general": 10,
  "border-top-left-radius-l": undefined,
  "border-top-left-radius-m": undefined,
  "border-top-left-radius-s": undefined,
  "border-top-left-radius-xl": undefined,
  "border-top-left-radius-xs": undefined,
  "border-top-left-radius-xxl": undefined,
  "border-top-right-radius-general": 10,
  "border-top-right-radius-l": undefined,
  "border-top-right-radius-m": undefined,
  "border-top-right-radius-s": undefined,
  "border-top-right-radius-xl": undefined,
  "border-top-right-radius-xs": undefined,
  "border-top-right-radius-xxl": undefined,
  "border-top-width-general": 2,
  "border-top-width-l": undefined,
  "border-top-width-m": undefined,
  "border-top-width-s": undefined,
  "border-top-width-xl": undefined,
  "border-top-width-xs": undefined,
  "border-top-width-xxl": undefined,
  "border-unit-radius-general": "px",
  "border-unit-radius-l": undefined,
  "border-unit-radius-m": undefined,
  "border-unit-radius-s": undefined,
  "border-unit-radius-xl": undefined,
  "border-unit-radius-xs": undefined,
  "border-unit-radius-xxl": undefined,
  "border-unit-width-general": "px",
  "border-unit-width-l": undefined,
  "border-unit-width-m": undefined,
  "border-unit-width-s": undefined,
  "border-unit-width-xl": undefined,
  "border-unit-width-xs": undefined,
  "border-unit-width-xxl": undefined,
}
`;

exports[`getGroupAttributes Return basic attributes from array with hover 1`] = `
{
  "border-bottom-left-radius-general": 10,
  "border-bottom-left-radius-general-hover": 100,
  "border-bottom-left-radius-l": undefined,
  "border-bottom-left-radius-l-hover": undefined,
  "border-bottom-left-radius-m": undefined,
  "border-bottom-left-radius-m-hover": undefined,
  "border-bottom-left-radius-s": undefined,
  "border-bottom-left-radius-s-hover": undefined,
  "border-bottom-left-radius-xl": undefined,
  "border-bottom-left-radius-xl-hover": undefined,
  "border-bottom-left-radius-xs": undefined,
  "border-bottom-left-radius-xs-hover": undefined,
  "border-bottom-left-radius-xxl": undefined,
  "border-bottom-left-radius-xxl-hover": undefined,
  "border-bottom-right-radius-general": 10,
  "border-bottom-right-radius-general-hover": 100,
  "border-bottom-right-radius-l": undefined,
  "border-bottom-right-radius-l-hover": undefined,
  "border-bottom-right-radius-m": undefined,
  "border-bottom-right-radius-m-hover": undefined,
  "border-bottom-right-radius-s": undefined,
  "border-bottom-right-radius-s-hover": undefined,
  "border-bottom-right-radius-xl": undefined,
  "border-bottom-right-radius-xl-hover": undefined,
  "border-bottom-right-radius-xs": undefined,
  "border-bottom-right-radius-xs-hover": undefined,
  "border-bottom-right-radius-xxl": undefined,
  "border-bottom-right-radius-xxl-hover": undefined,
  "border-bottom-width-general": 2,
  "border-bottom-width-general-hover": 20,
  "border-bottom-width-l": undefined,
  "border-bottom-width-l-hover": undefined,
  "border-bottom-width-m": undefined,
  "border-bottom-width-m-hover": undefined,
  "border-bottom-width-s": undefined,
  "border-bottom-width-s-hover": undefined,
  "border-bottom-width-xl": undefined,
  "border-bottom-width-xl-hover": undefined,
  "border-bottom-width-xs": undefined,
  "border-bottom-width-xs-hover": undefined,
  "border-bottom-width-xxl": undefined,
  "border-bottom-width-xxl-hover": undefined,
  "border-color-general": undefined,
  "border-color-general-hover": undefined,
  "border-color-l": undefined,
  "border-color-l-hover": undefined,
  "border-color-m": undefined,
  "border-color-m-hover": undefined,
  "border-color-s": undefined,
  "border-color-s-hover": undefined,
  "border-color-xl": undefined,
  "border-color-xl-hover": undefined,
  "border-color-xs": undefined,
  "border-color-xs-hover": undefined,
  "border-color-xxl": undefined,
  "border-color-xxl-hover": undefined,
  "border-left-width-general": 2,
  "border-left-width-general-hover": 20,
  "border-left-width-l": undefined,
  "border-left-width-l-hover": undefined,
  "border-left-width-m": undefined,
  "border-left-width-m-hover": undefined,
  "border-left-width-s": undefined,
  "border-left-width-s-hover": undefined,
  "border-left-width-xl": undefined,
  "border-left-width-xl-hover": undefined,
  "border-left-width-xs": undefined,
  "border-left-width-xs-hover": undefined,
  "border-left-width-xxl": undefined,
  "border-left-width-xxl-hover": undefined,
  "border-palette-color-general": 5,
  "border-palette-color-general-hover": 3,
  "border-palette-color-l": undefined,
  "border-palette-color-l-hover": undefined,
  "border-palette-color-m": undefined,
  "border-palette-color-m-hover": undefined,
  "border-palette-color-s": undefined,
  "border-palette-color-s-hover": undefined,
  "border-palette-color-xl": undefined,
  "border-palette-color-xl-hover": undefined,
  "border-palette-color-xs": undefined,
  "border-palette-color-xs-hover": undefined,
  "border-palette-color-xxl": undefined,
  "border-palette-color-xxl-hover": undefined,
  "border-palette-opacity-general": undefined,
  "border-palette-opacity-general-hover": 40,
  "border-palette-opacity-l": undefined,
  "border-palette-opacity-l-hover": undefined,
  "border-palette-opacity-m": undefined,
  "border-palette-opacity-m-hover": undefined,
  "border-palette-opacity-s": undefined,
  "border-palette-opacity-s-hover": undefined,
  "border-palette-opacity-xl": undefined,
  "border-palette-opacity-xl-hover": undefined,
  "border-palette-opacity-xs": undefined,
  "border-palette-opacity-xs-hover": undefined,
  "border-palette-opacity-xxl": undefined,
  "border-palette-opacity-xxl-hover": undefined,
  "border-palette-sc-status-general": undefined,
  "border-palette-sc-status-general-hover": undefined,
  "border-palette-sc-status-l": undefined,
  "border-palette-sc-status-l-hover": undefined,
  "border-palette-sc-status-m": undefined,
  "border-palette-sc-status-m-hover": undefined,
  "border-palette-sc-status-s": undefined,
  "border-palette-sc-status-s-hover": undefined,
  "border-palette-sc-status-xl": undefined,
  "border-palette-sc-status-xl-hover": undefined,
  "border-palette-sc-status-xs": undefined,
  "border-palette-sc-status-xs-hover": undefined,
  "border-palette-sc-status-xxl": undefined,
  "border-palette-sc-status-xxl-hover": undefined,
  "border-palette-status-general": true,
  "border-palette-status-general-hover": true,
  "border-palette-status-l": undefined,
  "border-palette-status-l-hover": undefined,
  "border-palette-status-m": undefined,
  "border-palette-status-m-hover": undefined,
  "border-palette-status-s": undefined,
  "border-palette-status-s-hover": undefined,
  "border-palette-status-xl": undefined,
  "border-palette-status-xl-hover": undefined,
  "border-palette-status-xs": undefined,
  "border-palette-status-xs-hover": undefined,
  "border-palette-status-xxl": undefined,
  "border-palette-status-xxl-hover": undefined,
  "border-right-width-general": 2,
  "border-right-width-general-hover": 20,
  "border-right-width-l": undefined,
  "border-right-width-l-hover": undefined,
  "border-right-width-m": undefined,
  "border-right-width-m-hover": undefined,
  "border-right-width-s": undefined,
  "border-right-width-s-hover": undefined,
  "border-right-width-xl": undefined,
  "border-right-width-xl-hover": undefined,
  "border-right-width-xs": undefined,
  "border-right-width-xs-hover": undefined,
  "border-right-width-xxl": undefined,
  "border-right-width-xxl-hover": undefined,
  "border-status-hover": true,
  "border-style-general": "solid",
  "border-style-general-hover": "dashed",
  "border-style-l": undefined,
  "border-style-l-hover": undefined,
  "border-style-m": undefined,
  "border-style-m-hover": undefined,
  "border-style-s": undefined,
  "border-style-s-hover": undefined,
  "border-style-xl": undefined,
  "border-style-xl-hover": undefined,
  "border-style-xs": undefined,
  "border-style-xs-hover": undefined,
  "border-style-xxl": undefined,
  "border-style-xxl-hover": undefined,
  "border-sync-radius-general": true,
  "border-sync-radius-general-hover": true,
  "border-sync-radius-l": undefined,
  "border-sync-radius-l-hover": undefined,
  "border-sync-radius-m": undefined,
  "border-sync-radius-m-hover": undefined,
  "border-sync-radius-s": undefined,
  "border-sync-radius-s-hover": undefined,
  "border-sync-radius-xl": undefined,
  "border-sync-radius-xl-hover": undefined,
  "border-sync-radius-xs": undefined,
  "border-sync-radius-xs-hover": undefined,
  "border-sync-radius-xxl": undefined,
  "border-sync-radius-xxl-hover": undefined,
  "border-sync-width-general": true,
  "border-sync-width-general-hover": true,
  "border-sync-width-l": undefined,
  "border-sync-width-l-hover": undefined,
  "border-sync-width-m": undefined,
  "border-sync-width-m-hover": undefined,
  "border-sync-width-s": undefined,
  "border-sync-width-s-hover": undefined,
  "border-sync-width-xl": undefined,
  "border-sync-width-xl-hover": undefined,
  "border-sync-width-xs": undefined,
  "border-sync-width-xs-hover": undefined,
  "border-sync-width-xxl": undefined,
  "border-sync-width-xxl-hover": undefined,
  "border-top-left-radius-general": 10,
  "border-top-left-radius-general-hover": 100,
  "border-top-left-radius-l": undefined,
  "border-top-left-radius-l-hover": undefined,
  "border-top-left-radius-m": undefined,
  "border-top-left-radius-m-hover": undefined,
  "border-top-left-radius-s": undefined,
  "border-top-left-radius-s-hover": undefined,
  "border-top-left-radius-xl": undefined,
  "border-top-left-radius-xl-hover": undefined,
  "border-top-left-radius-xs": undefined,
  "border-top-left-radius-xs-hover": undefined,
  "border-top-left-radius-xxl": undefined,
  "border-top-left-radius-xxl-hover": undefined,
  "border-top-right-radius-general": 10,
  "border-top-right-radius-general-hover": 100,
  "border-top-right-radius-l": undefined,
  "border-top-right-radius-l-hover": undefined,
  "border-top-right-radius-m": undefined,
  "border-top-right-radius-m-hover": undefined,
  "border-top-right-radius-s": undefined,
  "border-top-right-radius-s-hover": undefined,
  "border-top-right-radius-xl": undefined,
  "border-top-right-radius-xl-hover": undefined,
  "border-top-right-radius-xs": undefined,
  "border-top-right-radius-xs-hover": undefined,
  "border-top-right-radius-xxl": undefined,
  "border-top-right-radius-xxl-hover": undefined,
  "border-top-width-general": 2,
  "border-top-width-general-hover": 20,
  "border-top-width-l": undefined,
  "border-top-width-l-hover": undefined,
  "border-top-width-m": undefined,
  "border-top-width-m-hover": undefined,
  "border-top-width-s": undefined,
  "border-top-width-s-hover": undefined,
  "border-top-width-xl": undefined,
  "border-top-width-xl-hover": undefined,
  "border-top-width-xs": undefined,
  "border-top-width-xs-hover": undefined,
  "border-top-width-xxl": undefined,
  "border-top-width-xxl-hover": undefined,
  "border-unit-radius-general": "px",
  "border-unit-radius-general-hover": "px",
  "border-unit-radius-l": undefined,
  "border-unit-radius-l-hover": undefined,
  "border-unit-radius-m": undefined,
  "border-unit-radius-m-hover": undefined,
  "border-unit-radius-s": undefined,
  "border-unit-radius-s-hover": undefined,
  "border-unit-radius-xl": undefined,
  "border-unit-radius-xl-hover": undefined,
  "border-unit-radius-xs": undefined,
  "border-unit-radius-xs-hover": undefined,
  "border-unit-radius-xxl": undefined,
  "border-unit-radius-xxl-hover": undefined,
  "border-unit-width-general": "px",
  "border-unit-width-general-hover": "px",
  "border-unit-width-l": undefined,
  "border-unit-width-l-hover": undefined,
  "border-unit-width-m": undefined,
  "border-unit-width-m-hover": undefined,
  "border-unit-width-s": undefined,
  "border-unit-width-s-hover": undefined,
  "border-unit-width-xl": undefined,
  "border-unit-width-xl-hover": undefined,
  "border-unit-width-xs": undefined,
  "border-unit-width-xs-hover": undefined,
  "border-unit-width-xxl": undefined,
  "border-unit-width-xxl-hover": undefined,
}
`;

exports[`getGroupAttributes Return basic attributes from string 1`] = `
{
  "border-color-general": undefined,
  "border-color-l": undefined,
  "border-color-m": undefined,
  "border-color-s": undefined,
  "border-color-xl": undefined,
  "border-color-xs": undefined,
  "border-color-xxl": undefined,
  "border-palette-color-general": 5,
  "border-palette-color-l": undefined,
  "border-palette-color-m": undefined,
  "border-palette-color-s": undefined,
  "border-palette-color-xl": undefined,
  "border-palette-color-xs": undefined,
  "border-palette-color-xxl": undefined,
  "border-palette-opacity-general": undefined,
  "border-palette-opacity-l": undefined,
  "border-palette-opacity-m": undefined,
  "border-palette-opacity-s": undefined,
  "border-palette-opacity-xl": undefined,
  "border-palette-opacity-xs": undefined,
  "border-palette-opacity-xxl": undefined,
  "border-palette-sc-status-general": undefined,
  "border-palette-sc-status-l": undefined,
  "border-palette-sc-status-m": undefined,
  "border-palette-sc-status-s": undefined,
  "border-palette-sc-status-xl": undefined,
  "border-palette-sc-status-xs": undefined,
  "border-palette-sc-status-xxl": undefined,
  "border-palette-status-general": true,
  "border-palette-status-l": undefined,
  "border-palette-status-m": undefined,
  "border-palette-status-s": undefined,
  "border-palette-status-xl": undefined,
  "border-palette-status-xs": undefined,
  "border-palette-status-xxl": undefined,
  "border-style-general": "solid",
  "border-style-l": undefined,
  "border-style-m": undefined,
  "border-style-s": undefined,
  "border-style-xl": undefined,
  "border-style-xs": undefined,
  "border-style-xxl": undefined,
}
`;

exports[`getGroupAttributes Return basic attributes from string with hover 1`] = `
{
  "border-color-general": undefined,
  "border-color-general-hover": undefined,
  "border-color-l": undefined,
  "border-color-l-hover": undefined,
  "border-color-m": undefined,
  "border-color-m-hover": undefined,
  "border-color-s": undefined,
  "border-color-s-hover": undefined,
  "border-color-xl": undefined,
  "border-color-xl-hover": undefined,
  "border-color-xs": undefined,
  "border-color-xs-hover": undefined,
  "border-color-xxl": undefined,
  "border-color-xxl-hover": undefined,
  "border-palette-color-general": 5,
  "border-palette-color-general-hover": 3,
  "border-palette-color-l": undefined,
  "border-palette-color-l-hover": undefined,
  "border-palette-color-m": undefined,
  "border-palette-color-m-hover": undefined,
  "border-palette-color-s": undefined,
  "border-palette-color-s-hover": undefined,
  "border-palette-color-xl": undefined,
  "border-palette-color-xl-hover": undefined,
  "border-palette-color-xs": undefined,
  "border-palette-color-xs-hover": undefined,
  "border-palette-color-xxl": undefined,
  "border-palette-color-xxl-hover": undefined,
  "border-palette-opacity-general": undefined,
  "border-palette-opacity-general-hover": 40,
  "border-palette-opacity-l": undefined,
  "border-palette-opacity-l-hover": undefined,
  "border-palette-opacity-m": undefined,
  "border-palette-opacity-m-hover": undefined,
  "border-palette-opacity-s": undefined,
  "border-palette-opacity-s-hover": undefined,
  "border-palette-opacity-xl": undefined,
  "border-palette-opacity-xl-hover": undefined,
  "border-palette-opacity-xs": undefined,
  "border-palette-opacity-xs-hover": undefined,
  "border-palette-opacity-xxl": undefined,
  "border-palette-opacity-xxl-hover": undefined,
  "border-palette-sc-status-general": undefined,
  "border-palette-sc-status-general-hover": undefined,
  "border-palette-sc-status-l": undefined,
  "border-palette-sc-status-l-hover": undefined,
  "border-palette-sc-status-m": undefined,
  "border-palette-sc-status-m-hover": undefined,
  "border-palette-sc-status-s": undefined,
  "border-palette-sc-status-s-hover": undefined,
  "border-palette-sc-status-xl": undefined,
  "border-palette-sc-status-xl-hover": undefined,
  "border-palette-sc-status-xs": undefined,
  "border-palette-sc-status-xs-hover": undefined,
  "border-palette-sc-status-xxl": undefined,
  "border-palette-sc-status-xxl-hover": undefined,
  "border-palette-status-general": true,
  "border-palette-status-general-hover": true,
  "border-palette-status-l": undefined,
  "border-palette-status-l-hover": undefined,
  "border-palette-status-m": undefined,
  "border-palette-status-m-hover": undefined,
  "border-palette-status-s": undefined,
  "border-palette-status-s-hover": undefined,
  "border-palette-status-xl": undefined,
  "border-palette-status-xl-hover": undefined,
  "border-palette-status-xs": undefined,
  "border-palette-status-xs-hover": undefined,
  "border-palette-status-xxl": undefined,
  "border-palette-status-xxl-hover": undefined,
  "border-status-hover": true,
  "border-style-general": "solid",
  "border-style-general-hover": "dashed",
  "border-style-l": undefined,
  "border-style-l-hover": undefined,
  "border-style-m": undefined,
  "border-style-m-hover": undefined,
  "border-style-s": undefined,
  "border-style-s-hover": undefined,
  "border-style-xl": undefined,
  "border-style-xl-hover": undefined,
  "border-style-xs": undefined,
  "border-style-xs-hover": undefined,
  "border-style-xxl": undefined,
  "border-style-xxl-hover": undefined,
}
`;

exports[`getGroupAttributes Return basic attributes from string with prefix 1`] = `
{
  "icon-border-color-general": undefined,
  "icon-border-color-l": undefined,
  "icon-border-color-m": undefined,
  "icon-border-color-s": undefined,
  "icon-border-color-xl": undefined,
  "icon-border-color-xs": undefined,
  "icon-border-color-xxl": undefined,
  "icon-border-palette-color-general": 4,
  "icon-border-palette-color-l": undefined,
  "icon-border-palette-color-m": undefined,
  "icon-border-palette-color-s": undefined,
  "icon-border-palette-color-xl": undefined,
  "icon-border-palette-color-xs": undefined,
  "icon-border-palette-color-xxl": undefined,
  "icon-border-palette-opacity-general": undefined,
  "icon-border-palette-opacity-l": undefined,
  "icon-border-palette-opacity-m": undefined,
  "icon-border-palette-opacity-s": undefined,
  "icon-border-palette-opacity-xl": undefined,
  "icon-border-palette-opacity-xs": undefined,
  "icon-border-palette-opacity-xxl": undefined,
  "icon-border-palette-sc-status-general": undefined,
  "icon-border-palette-sc-status-l": undefined,
  "icon-border-palette-sc-status-m": undefined,
  "icon-border-palette-sc-status-s": undefined,
  "icon-border-palette-sc-status-xl": undefined,
  "icon-border-palette-sc-status-xs": undefined,
  "icon-border-palette-sc-status-xxl": undefined,
  "icon-border-palette-status-general": true,
  "icon-border-palette-status-l": undefined,
  "icon-border-palette-status-m": undefined,
  "icon-border-palette-status-s": undefined,
  "icon-border-palette-status-xl": undefined,
  "icon-border-palette-status-xs": undefined,
  "icon-border-palette-status-xxl": undefined,
  "icon-border-style-general": "solid",
  "icon-border-style-l": undefined,
  "icon-border-style-m": undefined,
  "icon-border-style-s": undefined,
  "icon-border-style-xl": undefined,
  "icon-border-style-xs": undefined,
  "icon-border-style-xxl": undefined,
}
`;
